@@ -25,6 +25,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #8933: distutils' PKG-INFO files will now correctly report
+  Metadata-Version: 1.1 instead of 1.0 if a Classifier or Download-URL field is
+  present.
+
 - Issue #9561: distutils now reads and writes egg-info files using UTF-8,
   instead of the locale encoding.
 
